# academic-project

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: multplatform-ci-cd.yml  unit-tests.yml
academic/project/: __init__.py  exemplo.py  main.py  version.txt
academic/project/controllers/: components.py  entidades.py
academic/project/model/: components.py  db.py  entidades.py
academic/project/views/: pages.py  router.py
tests/: conftest.py  package_test.py
