[tool.poetry]
name = "academic-project"
version = "0.1.0"
description = "Projeto acadêmico para matéria de Desenvolvimento rápido em Python"
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "academic"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"


[tool.poetry.group.lint.dependencies]
ruff = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
incolume-py-changelog = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
